--- a/index.html
+++ b/index.html
@@ -145,11 +145,32 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
       </div>
       
       </div>
-      <button class="btn-primary resum"><a href="">Download CV</a></button>
+      <div class="text-center">
+  <button class="btn-primary">Download CV</button>
+</div>
+
      </section>
     </main>
     <footer>
-    
+    <section class="sec-bg">
+        <div class="footer-column">
+      <h2>Lets Connect</h2>
+      <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8 P.M ET, Monday through Friday</p>
+      <div>
+        <a href=""><img src="/images/icons/facebook.png" alt=""></a>
+      </div>
+      <a href=""><img src="/images/icons/insta.png" alt=""></a>
+      <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+        </div>
+        <div class="footer-column">
+            <h2>Let's Inbox Me </h2>
+            <form action="">
+                <input type="text" name="" id="" placeholder="your name..">
+                <input type="email" name="" id="" placeholder="your email...">
+                <textarea name="" id="" placeholder="your comments" rows="10" cols="30"></textarea>
+            </form>
+        </div>
+    </section>
     </footer>
 </body>
 </html>
